--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,7 @@
 	justify-content: center;
 	font-size: calc(10px + 2vmin);
 	color: white;
+	/* transform: translateX('50px'); */
 }
 
 .App-link {
